--- a/ModelGraph/ModelGraphLibrary/ModelGraphLibrary.csproj
+++ b/ModelGraph/ModelGraphLibrary/ModelGraphLibrary.csproj
@@ -126,6 +126,9 @@
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>5.4.0</Version>
     </PackageReference>
+    <PackageReference Include="System.ValueTuple">
+      <Version>4.4.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Graph\" />
