--- a/ModelGraph/ModelGraphUnitTest/ModelGraphUnitTest.csproj
+++ b/ModelGraph/ModelGraphUnitTest/ModelGraphUnitTest.csproj
@@ -133,6 +133,9 @@
     <PackageReference Include="MSTest.TestFramework">
       <Version>1.1.18</Version>
     </PackageReference>
+    <PackageReference Include="System.ValueTuple">
+      <Version>4.4.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ModelGraphLibrary\ModelGraphLibrary.csproj">
