--- a/ModelGraph/ModelGraphLibrary/ModelGraphLibrary.csproj
+++ b/ModelGraph/ModelGraphLibrary/ModelGraphLibrary.csproj
@@ -107,10 +107,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Chef\Chef.cs" />
+    <Compile Include="Enum\ValueType.cs" />
     <Compile Include="Enum\NativeType.cs" />
     <Compile Include="Enum\ParseError.cs" />
-    <Compile Include="Enum\ParseType.cs" />
     <Compile Include="Enum\StepFlags.cs" />
+    <Compile Include="Enum\StepType.cs" />
     <Compile Include="Item\Item.cs" />
     <Compile Include="Item\Query.cs" />
     <Compile Include="Enum\QueryType.cs" />
@@ -118,7 +119,40 @@
     <Compile Include="Enum\Store.cs" />
     <Compile Include="Enum\Trait.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Value\Value.cs" />
+    <Compile Include="Value\ValuesOfDoubleArray.cs" />
+    <Compile Include="Value\ValuesOfDecimalArray.cs" />
+    <Compile Include="Value\ValuesOfChar.cs" />
+    <Compile Include="Value\ValuesOfByte.cs" />
+    <Compile Include="Value\ValuesOfSByte.cs" />
+    <Compile Include="Value\ValuesOfInt16.cs" />
+    <Compile Include="Value\ValuesOfInt32.cs" />
+    <Compile Include="Value\ValuesOfInt64.cs" />
+    <Compile Include="Value\ValuesOfUInt16.cs" />
+    <Compile Include="Value\ValuesOfUInt32.cs" />
+    <Compile Include="Value\ValuesOfUInt64.cs" />
+    <Compile Include="Value\ValuesOfSingle.cs" />
+    <Compile Include="Value\ValuesOfDouble.cs" />
+    <Compile Include="Value\ValuesOfDecimal.cs" />
+    <Compile Include="Value\ValuesOfGuid.cs" />
+    <Compile Include="Value\ValuesOfDateTime.cs" />
+    <Compile Include="Value\ValuesOfTimeSpan.cs" />
+    <Compile Include="Value\ValuesOfString.cs" />
+    <Compile Include="Value\ValuesOfCharArray.cs" />
+    <Compile Include="Value\ValuesOfHexArray.cs" />
+    <Compile Include="Value\ValuesOfByteArray.cs" />
+    <Compile Include="Value\ValuesOfSByteArray.cs" />
+    <Compile Include="Value\ValuesOfInt16Array.cs" />
+    <Compile Include="Value\ValuesOfInt32Array.cs" />
+    <Compile Include="Value\ValuesOfInt64Array.cs" />
+    <Compile Include="Value\ValuesOfUInt16Array.cs" />
+    <Compile Include="Value\ValuesOfUInt32Array.cs" />
+    <Compile Include="Value\ValuesOfUInt64Array.cs" />
+    <Compile Include="Value\ValuesOfSingleArray.cs" />
+    <Compile Include="Value\ValuesOfBool.cs" />
+    <Compile Include="Value\ValuesOf.cs" />
     <Compile Include="WhereSelect\Parser.cs" />
+    <Compile Include="WhereSelect\Step\Logical\OR.cs" />
     <Compile Include="WhereSelect\Step\Step.cs" />
     <EmbeddedResource Include="Properties\ModelGraphLibrary.rd.xml" />
   </ItemGroup>
@@ -132,6 +166,11 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Graph\" />
+    <Folder Include="Property\" />
+    <Folder Include="WhereSelect\Step\Alphabetic\" />
+    <Folder Include="WhereSelect\Step\Compare\" />
+    <Folder Include="WhereSelect\Step\Literal\" />
+    <Folder Include="WhereSelect\Step\Numeric\" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
