--- a/ModelGraph/ModelGraphLibrary/ModelGraphLibrary.csproj
+++ b/ModelGraph/ModelGraphLibrary/ModelGraphLibrary.csproj
@@ -107,6 +107,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Chef\Chef.cs" />
+    <Compile Include="Enum\Pairing.cs" />
     <Compile Include="Enum\ValueType.cs" />
     <Compile Include="Enum\NativeType.cs" />
     <Compile Include="Enum\ParseError.cs" />
@@ -118,7 +119,12 @@
     <Compile Include="Item\State.cs" />
     <Compile Include="Enum\Store.cs" />
     <Compile Include="Enum\Trait.cs" />
+    <Compile Include="Item\StoreOf.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Relation\Mapping\MapToMany.cs" />
+    <Compile Include="Relation\Mapping\MapToOne.cs" />
+    <Compile Include="Relation\Relation.cs" />
+    <Compile Include="Relation\RelationOf.cs" />
     <Compile Include="Value\Value.cs" />
     <Compile Include="Value\ValuesOfDoubleArray.cs" />
     <Compile Include="Value\ValuesOfDecimalArray.cs" />
