--- a/ModelGraph/ModelGraphUnitTest/ModelGraphUnitTest.csproj
+++ b/ModelGraph/ModelGraphUnitTest/ModelGraphUnitTest.csproj
@@ -95,8 +95,9 @@
     <SDKReference Include="TestPlatform.Universal, Version=$(UnitTestPlatformVersion)" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="WhereSelect\ParserTest.cs" />
+    <Compile Include="Query\ParserTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Relation\MapToOneTest.cs" />
     <Compile Include="UnitTestApp.xaml.cs">
       <DependentUpon>UnitTestApp.xaml</DependentUpon>
     </Compile>
