Added method Parser - ResoveComplexity

--- a/ModelGraph/ModelGraphLibrary/ModelGraphLibrary.csproj
+++ b/ModelGraph/ModelGraphLibrary/ModelGraphLibrary.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Models\UIRequest\IPageControl.cs" />
     <Compile Include="Models\UIRequest\IViewControl.cs" />
     <Compile Include="Models\UIRequest\UIRequest.cs" />
+    <Compile Include="Query\Enum\ParseFlags.cs" />
     <Compile Include="Query\Step\Literal\BOOL.cs" />
     <Compile Include="Query\Step\Literal\INT16.cs" />
     <Compile Include="Query\Step\Literal\INT32.cs" />
