--- a/ModelGraph/ModelGraphUnitTest/ModelGraphUnitTest.csproj
+++ b/ModelGraph/ModelGraphUnitTest/ModelGraphUnitTest.csproj
@@ -95,13 +95,15 @@
     <SDKReference Include="TestPlatform.Universal, Version=$(UnitTestPlatformVersion)" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Query\ParserTest.cs" />
+    <Compile Include="Query\WhereSelect.cs" />
+    <Compile Include="Query\Parser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Relation\MapToOneTest.cs" />
     <Compile Include="TestData\TestData.cs" />
     <Compile Include="UnitTestApp.xaml.cs">
       <DependentUpon>UnitTestApp.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ModelGraphLibraryTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="UnitTestApp.xaml">
