Another installment refactor Value

--- a/ModelGraph/ModelGraphLibrary/ModelGraphLibrary.csproj
+++ b/ModelGraph/ModelGraphLibrary/ModelGraphLibrary.csproj
@@ -254,40 +254,41 @@
     <Compile Include="Relation\RelationOf.cs" />
     <Compile Include="Value\Value.cs" />
     <Compile Include="Value\ValueNone.cs" />
-    <Compile Include="Value\ValueOf\ValuesOfDoubleArray.cs" />
-    <Compile Include="Value\ValueOf\ValuesOfDecimalArray.cs" />
-    <Compile Include="Value\ValueOf\ValuesOfChar.cs" />
-    <Compile Include="Value\ValueOf\ValuesOfByte.cs" />
-    <Compile Include="Value\ValueOf\ValuesOfSByte.cs" />
-    <Compile Include="Value\ValueOf\ValuesOfInt16.cs" />
-    <Compile Include="Value\ValueOf\ValuesOfInt32.cs" />
-    <Compile Include="Value\ValueOf\ValuesOfInt64.cs" />
-    <Compile Include="Value\ValueOf\ValuesOfUInt16.cs" />
-    <Compile Include="Value\ValueOf\ValuesOfUInt32.cs" />
-    <Compile Include="Value\ValueOf\ValuesOfUInt64.cs" />
-    <Compile Include="Value\ValueOf\ValuesOfSingle.cs" />
-    <Compile Include="Value\ValueOf\ValuesOfDouble.cs" />
-    <Compile Include="Value\ValueOf\ValuesOfDecimal.cs" />
-    <Compile Include="Value\ValueOf\ValuesOfGuid.cs" />
-    <Compile Include="Value\ValueOf\ValuesOfDateTime.cs" />
-    <Compile Include="Value\ValueOf\ValuesOfTimeSpan.cs" />
-    <Compile Include="Value\ValueOf\ValuesOfString.cs" />
-    <Compile Include="Value\ValueOf\ValuesOfCharArray.cs" />
-    <Compile Include="Value\ValueOf\ValuesOfHexArray.cs" />
-    <Compile Include="Value\ValueOf\ValuesOfByteArray.cs" />
-    <Compile Include="Value\ValueOf\ValuesOfSByteArray.cs" />
-    <Compile Include="Value\ValueOf\ValuesOfInt16Array.cs" />
-    <Compile Include="Value\ValueOf\ValuesOfInt32Array.cs" />
-    <Compile Include="Value\ValueOf\ValuesOfInt64Array.cs" />
-    <Compile Include="Value\ValueOf\ValuesOfUInt16Array.cs" />
-    <Compile Include="Value\ValueOf\ValuesOfUInt32Array.cs" />
-    <Compile Include="Value\ValueOf\ValuesOfUInt64Array.cs" />
-    <Compile Include="Value\ValueOf\ValuesOfSingleArray.cs" />
-    <Compile Include="Value\ValueOf\ValuesOfBool.cs" />
-    <Compile Include="Value\ValuesOf.cs" />
+    <Compile Include="Value\ValueOfProperty.cs" />
+    <Compile Include="Value\ValueOf\ValueOfBool.cs" />
+    <Compile Include="Value\ValueOf\ValueOfByte.cs" />
+    <Compile Include="Value\ValueOf\ValueOfByteArray.cs" />
+    <Compile Include="Value\ValueOf\ValueOfChar.cs" />
+    <Compile Include="Value\ValueOf\ValueOfCharArray.cs" />
+    <Compile Include="Value\ValueOf\ValueOfDateTime.cs" />
+    <Compile Include="Value\ValueOf\ValueOfDecimal.cs" />
+    <Compile Include="Value\ValueOf\ValueOfDecimalArray.cs" />
+    <Compile Include="Value\ValueOf\ValueOfDouble.cs" />
+    <Compile Include="Value\ValueOf\ValueOfDoubleArray.cs" />
+    <Compile Include="Value\ValueOf\ValueOfGuid.cs" />
+    <Compile Include="Value\ValueOf\ValueOfHexArray.cs" />
+    <Compile Include="Value\ValueOf\ValueOfInt16.cs" />
+    <Compile Include="Value\ValueOf\ValueOfInt16Array.cs" />
+    <Compile Include="Value\ValueOf\ValueOfInt32.cs" />
+    <Compile Include="Value\ValueOf\ValueOfInt32Array.cs" />
+    <Compile Include="Value\ValueOf\ValueOfInt64.cs" />
+    <Compile Include="Value\ValueOf\ValueOfInt64Array.cs" />
+    <Compile Include="Value\ValueOf\ValueOfSByte.cs" />
+    <Compile Include="Value\ValueOf\ValueOfSByteArray.cs" />
+    <Compile Include="Value\ValueOf\ValueOfSingle.cs" />
+    <Compile Include="Value\ValueOf\ValueOfSingleArray.cs" />
+    <Compile Include="Value\ValueOf\ValueOfString.cs" />
+    <Compile Include="Value\ValueOf\ValueOfTimeSpan.cs" />
+    <Compile Include="Value\ValueOf\ValueOfUInt16.cs" />
+    <Compile Include="Value\ValueOf\ValueOfUInt16Array.cs" />
+    <Compile Include="Value\ValueOf\ValueOfUInt32.cs" />
+    <Compile Include="Value\ValueOf\ValueOfUInt32Array.cs" />
+    <Compile Include="Value\ValueOf\ValueOfUInt64.cs" />
+    <Compile Include="Value\ValueOfType.cs" />
     <Compile Include="Query\Parser.cs" />
     <Compile Include="Query\Step\Step.cs" />
     <Compile Include="Query\WhereSelect.cs" />
+    <Compile Include="Value\ValueOf\ValueOfUInt64Array.cs" />
     <EmbeddedResource Include="Properties\ModelGraphLibrary.rd.xml" />
   </ItemGroup>
   <ItemGroup>
