--- a/ModelGraph/ModelGraphLibrary/ModelGraphLibrary.csproj
+++ b/ModelGraph/ModelGraphLibrary/ModelGraphLibrary.csproj
@@ -113,28 +113,45 @@
     <Compile Include="Models\UIRequest\IPageControl.cs" />
     <Compile Include="Models\UIRequest\IViewControl.cs" />
     <Compile Include="Models\UIRequest\UIRequest.cs" />
-    <Compile Include="Query\Enum\ParseFlags.cs" />
-    <Compile Include="Query\Step\Alphabetic\CONCAT.cs" />
-    <Compile Include="Query\Step\Compare\GT.cs" />
-    <Compile Include="Query\Step\Literal\BOOL.cs" />
-    <Compile Include="Query\Step\Literal\DATETIME.cs" />
-    <Compile Include="Query\Step\Literal\UINT64.cs" />
-    <Compile Include="Query\Step\Literal\UINT32.cs" />
-    <Compile Include="Query\Step\Literal\UINT16 .cs" />
-    <Compile Include="Query\Step\Literal\SBYTE.cs" />
-    <Compile Include="Query\Step\Literal\INT16.cs" />
-    <Compile Include="Query\Step\Literal\INT32.cs" />
-    <Compile Include="Query\Step\Literal\INT64.cs" />
-    <Compile Include="Query\Step\Literal\STRING.cs" />
-    <Compile Include="Query\Step\Literal\DOUBLE.cs" />
-    <Compile Include="Query\Step\Literal\BYTE.cs" />
-    <Compile Include="Query\Step\Literal\PROPERTY.cs" />
-    <Compile Include="Query\Step\Logical\AND2.cs" />
-    <Compile Include="Query\Step\Logical\OR2.cs" />
-    <Compile Include="Query\Step\Numeric\MINUS.cs" />
-    <Compile Include="Query\Step\Numeric\DIVIDE.cs" />
-    <Compile Include="Query\Step\Numeric\MULTIPLY.cs" />
-    <Compile Include="Query\Step\Numeric\PLUS.cs" />
+    <Compile Include="Query\Enum\QueryState.cs" />
+    <Compile Include="Query\Enum\StepError.cs" />
+    <Compile Include="Query\Enum\StepFlag1.cs" />
+    <Compile Include="Query\Enum\StepFlag2.cs" />
+    <Compile Include="Query\Step\Alphabetic\EvaluateConcat.cs" />
+    <Compile Include="Query\Step\Alphabetic\EvaluateRemove.cs" />
+    <Compile Include="Query\Step\BitField\EvaluateUIntAnd1.cs" />
+    <Compile Include="Query\Step\BitField\EvaluateUIntOr1.cs" />
+    <Compile Include="Query\Step\BitField\EvaluateULongAnd1.cs" />
+    <Compile Include="Query\Step\BitField\EvaluateULongOr1.cs" />
+    <Compile Include="Query\Step\Compare\EvaluateDoubleGT.cs" />
+    <Compile Include="Query\Step\Compare\EvaluateDoubleLT.cs" />
+    <Compile Include="Query\Step\Compare\EvaluateIntegerGT.cs" />
+    <Compile Include="Query\Step\Compare\EvaluateIntegerLT.cs" />
+    <Compile Include="Query\Step\ComputeStep.cs" />
+    <Compile Include="Query\Step\EvaluateBase.cs" />
+    <Compile Include="Query\Step\Literal\EvaluateBool.cs" />
+    <Compile Include="Query\Step\Literal\EvaluateByte.cs" />
+    <Compile Include="Query\Step\Literal\EvaluateDateTime.cs" />
+    <Compile Include="Query\Step\Literal\EvaluateDouble.cs" />
+    <Compile Include="Query\Step\Literal\EvaluateInt16.cs" />
+    <Compile Include="Query\Step\Literal\EvaluateInt32.cs" />
+    <Compile Include="Query\Step\Literal\EvaluateInt64.cs" />
+    <Compile Include="Query\Step\Literal\EvaluateParse.cs" />
+    <Compile Include="Query\Step\Literal\EvaluateProperty.cs" />
+    <Compile Include="Query\Step\Literal\EvaluateSByte.cs" />
+    <Compile Include="Query\Step\Literal\EvaluateString.cs" />
+    <Compile Include="Query\Step\Literal\EvaluateUInt16.cs" />
+    <Compile Include="Query\Step\Literal\EvaluateUInt32.cs" />
+    <Compile Include="Query\Step\Literal\EvaluateUInt64.cs" />
+    <Compile Include="Query\Step\Literal\EvaluateUnresolved.cs" />
+    <Compile Include="Query\Step\Logical\EvaluateAnd2.cs" />
+    <Compile Include="Query\Step\Logical\EvaluateOr2.cs" />
+    <Compile Include="Query\Step\Numeric\EvaluateDoubleDivide.cs" />
+    <Compile Include="Query\Step\Numeric\EvaluateDoubleMinus.cs" />
+    <Compile Include="Query\Step\Numeric\EvaluateDoubleMultiply.cs" />
+    <Compile Include="Query\Step\Numeric\EvaluateDoublePlus.cs" />
+    <Compile Include="Query\Step\Numeric\EvaluateIntegerMinus.cs" />
+    <Compile Include="Query\Step\Numeric\EvaluateIntegerPlus.cs" />
     <Compile Include="Updates\ChangeRoot.cs" />
     <Compile Include="Updates\ChangeSet.cs" />
     <Compile Include="Updates\ItemChange.cs" />
@@ -235,8 +252,6 @@
     <Compile Include="Value\Enum\NumericTerm.cs" />
     <Compile Include="Item\Enum\Pairing.cs" />
     <Compile Include="Value\Enum\ValueType.cs" />
-    <Compile Include="Query\Enum\ParseError.cs" />
-    <Compile Include="Query\Enum\StepFlags.cs" />
     <Compile Include="Query\Enum\StepType.cs" />
     <Compile Include="Item\Item.cs" />
     <Compile Include="Query\Query.cs" />
@@ -286,7 +301,6 @@
     <Compile Include="Value\ValueOf\ValueOfUInt64.cs" />
     <Compile Include="Value\ValueOfType.cs" />
     <Compile Include="Query\Parser.cs" />
-    <Compile Include="Query\Step\Step.cs" />
     <Compile Include="Query\WhereSelect.cs" />
     <Compile Include="Value\ValueOf\ValueOfUInt64Array.cs" />
     <EmbeddedResource Include="Properties\ModelGraphLibrary.rd.xml" />
