--- a/ModelGraph/ModelGraphUnitTest/ModelGraphUnitTest.csproj
+++ b/ModelGraph/ModelGraphUnitTest/ModelGraphUnitTest.csproj
@@ -95,10 +95,10 @@
     <SDKReference Include="TestPlatform.Universal, Version=$(UnitTestPlatformVersion)" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Query\WhereSelect.cs" />
-    <Compile Include="Query\Parser.cs" />
+    <Compile Include="Query\Test_WhereSelect.cs" />
+    <Compile Include="Query\Test_Parser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Relation\MapToOneTest.cs" />
+    <Compile Include="Relation\Test_MapToOne.cs" />
     <Compile Include="TestData\TestData.cs" />
     <Compile Include="UnitTestApp.xaml.cs">
       <DependentUpon>UnitTestApp.xaml</DependentUpon>
