Fixed =ValidateQueryX method, it now sets the IsTail flag =CharArray SetValue method

--- a/ModelGraph/ModelGraphUWP/ModelGraphUWP.csproj
+++ b/ModelGraph/ModelGraphUWP/ModelGraphUWP.csproj
@@ -171,8 +171,8 @@
       <DependentUpon>ShareTargetPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\ShellNavigationItem.cs" />
-    <Compile Include="Views\ShellNavigationPage.xaml.cs">
-      <DependentUpon>ShellNavigationPage.xaml</DependentUpon>
+    <Compile Include="Views\NavigationPage.xaml.cs">
+      <DependentUpon>NavigationPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\WhatsNewDialog.xaml.cs">
       <DependentUpon>WhatsNewDialog.xaml</DependentUpon>
@@ -241,7 +241,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Views\ShellNavigationPage.xaml">
+    <Page Include="Views\NavigationPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
